<resources>
    <string name="app_name">GetD Smart</string>
    <string name="tab_home">Home</string>
    <string name="tab_ai">AI</string>
    <string name="tab_health">Health</string>
    <string name="tab_my">My</string>
    <string name="state_connected">Connected</string>
    <string name="state_disconnected">Not connected</string>
    <string name="state_connecting">Connecting</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="device_empty">No device available</string>
    <string name="device_empty_tip">No Bluetooth pairing available at the moment. Click the button below to connect and add</string>
    <string name="device_add">Add new device</string>
    <string name="scan_add">Scan to add</string>
    <string name="scanning_tip">Searching for device. Place the phone close to the device</string>
    <string name="scanning_failed_tip">Search failed</string>
    <string name="scanning_failed_tip2">Target device not found?</string>
    <string name="re_scan">Rescan</string>
    <string name="connect">Connect</string>
    <string name="connnecting">Device connecting...</string>
    <string name="connect_failed">Connection failed</string>
    <string name="connect_failed_tip">Connection failed, please reconnect</string>
    <string name="reconnect">Reconnect</string>
    <string name="permission">Enable permissions</string>
    <string name="setting">Settings</string>
    <string name="permission_tip">Bluetooth scanning requires location and Bluetooth permissions</string>
    <string name="device_list">Device list</string>
    <string name="delete_device">Delete device</string>
    <string name="delete_device_tip">Are you sure to delete the device record? The connected device will be disconnected</string>
    <string name="balance_setting">Balance adjustment</string>
    <string name="eq_custom">Custom</string>
    <string name="eq_nature">Natural</string>
    <string name="eq_pop">Pop</string>
    <string name="eq_dance">Dance</string>
    <string name="eq_blue">Blues</string>
    <string name="eq_jazz">Jazz</string>
    <string name="eq_village">Country</string>
    <string name="eq_roll">Rock</string>
    <string name="eq_eletronic">Electronic music</string>
    <string name="eq_class">Classic</string>
    <string name="custom_sound_effect">Equalizer sound effect</string>
    <string name="gesture">Quick operation</string>
    <string name="single_click">Single click</string>
    <string name="double_click">Double click</string>
    <string name="left_ear">Left earphone</string>
    <string name="right_ear">Right earphone</string>
    <string name="fun_none">No effect</string>
    <string name="fun_pre">Previous song</string>
    <string name="fun_next">Next song</string>
    <string name="fun_play_pause">Play/Pause</string>
    <string name="fun_answer">Answer call</string>
    <string name="fun_hand_up">Hang up call</string>
    <string name="fun_callback">Redial call</string>
    <string name="fun_volume_up">Volume +</string>
    <string name="fun_volume_down">Volume -</string>
    <string name="not_support">This feature is not supported yet</string>
    <string name="find_device">Find glasses</string>
    <string name="play">Play voice</string>
    <string name="gesture_setting">Gesture settings</string>
    <string name="modify_name">Modify device name</string>
    <string name="edit_name">Edit name</string>
    <string name="edit_name_tip">Note: This operation will restart the device (if the device name is not displayed correctly, please re-pair and connect)</string>
    <string name="tip_empty_device_name">The name cannot be set to empty</string>
    <string name="tip_same_device_name">The device name has not changed</string>
    <string name="tip_name_to_long">The device name is too long</string>
    <string name="clear_pair">Clear pairing records</string>
    <string name="clear_pair_tip">Are you sure to clear all historical pairing records?</string>
    <string name="ai_chat">AI dialogue</string>
    <string name="ai_chat_describe">Chatgpt talks to you</string>
    <string name="ai_translate">AI translation</string>
    <string name="ai_translate_describe">Multi-language intelligent translation</string>
    <string name="ai_voice">Voice to text</string>
    <string name="ai_voice_describe">Voice to text in real time</string>
    <string name="press_to_record">Press and hold to speak</string>
    <string name="clear_all">Clear all content</string>
    <string name="translate">Translation</string>
    <string name="speech_tip">Please click the microphone to speak</string>
    <string name="real_time_translate">Recording in real time</string>
    <string name="recording">Recording</string>
    <string name="complete">Done</string>
    <string name="empty_tip">Content is empty</string>
    <string name="delete">Delete</string>
    <string name="net_error">Network error</string>
    <string name="lan_cn">CHINESE</string>
    <string name="lan_en">ENGLISH</string>
    <string name="permission_google_login_tip">This feature requires authorization to log in with Google to obtain Google health data. Click Confirm to start authorizing Google login.</string>
    <string name="permission_google_fit_tip">To obtain Google Health data, you need to agree to authorize the relevant data reading permissions. Click Confirm to start authorizing data permissions.</string>
    <string name="health">Health</string>
    <string name="steps">Steps</string>
    <string name="step_unit">Steps</string>
    <string name="calories">Calories</string>
    <string name="distance">Distance</string>
    <string name="km">/km</string>
    <string name="heart_rate">Heart rate</string>
    <string name="avg_step">Average Steps</string>
    <string name="times">/times</string>
    <string name="meditation_audio">Meditation audio</string>
    <string name="meditation_rain">Rain</string>
    <string name="meditation_thunder">Thunder</string>
    <string name="meditation">Meditation</string>
    <string name="meditation_rivers">Rivers</string>
    <string name="meditation_sleep">Fast sleep</string>
    <string name="meditation_fire">Bonfire</string>
    <string name="meditation_frog">Frog sound</string>
    <string name="meditation_wave">Wave</string>
    <string name="meditation_forest">Forest</string>
    <string name="login_now">Log in now</string>
    <string name="skip">Skip</string>
    <string name="email_input_tip">Please enter your email address</string>
    <string name="invalid_email">Email format is incorrect</string>
    <string name="psw_input_tip">Please enter your password</string>
    <string name="comfirm_psw_tip">Please confirm your password</string>
    <string name="comfirm_psw_tip2">The two passwords you entered do not match</string>
    <string name="input_code">Code</string>
    <string name="send_code">Send verification code</string>
    <string name="psw_forget">Forgot your password</string>
    <string name="register">Register</string>
    <string name="login">Log in</string>
    <string name="privacy_policy_hint">I have read and agreed to the User Agreement and Privacy Policy</string>
    <string name="privacy_agree_check">Please check the Agree button</string>
    <string name="app_version">Software version</string>
    <string name="language_set">Language settings</string>
    <string name="feedback">User feedback</string>
    <string name="privacy">Privacy policy</string>
    <string name="user_agreement">User agreement</string>
    <string name="feedback_tip">Please fill in your questions and feedback</string>
    <string name="feedback_category">Problem classification</string>
    <string name="feedback_category_quality">Sound quality</string>
    <string name="feedback_category_volume">Volume</string>
    <string name="feedback_category_connect">Bluetooth connection</string>
    <string name="feedback_contact">Contact info</string>
    <string name="commit_success">Submit successfully</string>
    <string name="commit">Submit</string>
    <string name="press_tip">Release to send,Swipe up to cancel</string>
    <string name="input_content">Input content...</string>
</resources>