<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.my.RegisterActivity"
    android:gravity="center_horizontal">
    <com.future.getd.ui.view.BaseTextView
        android:id="@+id/skip"
        android:layout_width="match_parent"
        android:gravity="end"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding"
        android:layout_marginEnd="@dimen/padding"
        android:text="@string/skip"
        style="@style/text_text333_sp16"
        android:visibility="invisible"
        />

    <ImageView
        android:layout_width="@dimen/dp_80"
        android:layout_height="@dimen/dp_80"
        android:layout_marginTop="@dimen/dp_63"
        android:src="@drawable/ic_launcher"/>

    <com.future.getd.ui.view.BaseTextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_24"
        android:text="@string/register"
        android:textSize="21sp"
        android:textColor="@color/text333" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_60"
        android:layout_marginTop="68dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/bg_main_item_radius_10dp"
        android:gravity="center_vertical"
        android:paddingStart="@dimen/padding"
        android:paddingEnd="@dimen/padding">

        <EditText
            android:id="@+id/email"
            style="@style/text_text999_sp16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/email_input_tip" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_60"
        android:layout_marginTop="18dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/bg_main_item_radius_10dp"
        android:gravity="center_vertical"
        android:paddingStart="@dimen/padding"
        android:paddingEnd="@dimen/padding">

        <EditText
            android:id="@+id/code"
            style="@style/text_text999_sp16"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/input_code"
            android:inputType="number"
            android:maxLength="6"/>

        <com.future.getd.ui.view.BaseTextView
            android:id="@+id/send_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/text_blue_sp16"
            android:gravity="center"
            android:text="@string/send_code"/>
        <com.future.getd.ui.view.BaseTextView
            android:id="@+id/countTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/text_blue_sp16"
            android:gravity="center"
            android:text="60"
            android:visibility="gone"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_60"
        android:layout_marginTop="18dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/bg_main_item_radius_10dp"
        android:gravity="center_vertical"
        android:paddingStart="@dimen/padding"
        android:paddingEnd="@dimen/padding">
        <EditText
            android:id="@+id/psw"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:hint="@string/psw_input_tip"
            android:inputType="textPassword"
            style="@style/text_text999_sp16"
            android:background="@null"/>
        <ImageView
            android:id="@+id/iv_psw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:src="@drawable/ic_pwd_hide_24dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_60"
        android:layout_marginTop="18dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/bg_main_item_radius_10dp"
        android:gravity="center_vertical"
        android:paddingStart="@dimen/padding"
        android:paddingEnd="@dimen/padding">
        <EditText
            android:id="@+id/psw_confirm"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:hint="@string/comfirm_psw_tip"
            android:inputType="textPassword"
            style="@style/text_text999_sp16"
            android:background="@null"/>
        <ImageView
            android:id="@+id/iv_psw_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:src="@drawable/ic_pwd_hide_24dp"/>
    </LinearLayout>

    <Button
        android:id="@+id/commit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:layout_marginTop="@dimen/dp_35"
        android:layout_marginBottom="@dimen/dp_50"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/bg_blue_radius_10dp"
        android:textColor="@color/white"
        android:text="@string/commit"
        android:textSize="@dimen/sp_16"/>
</LinearLayout>