<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ai.FragmentAI"
    android:orientation="vertical"
    android:padding="@dimen/dp_15">

    <include
        android:id="@+id/view_toolbar"
        layout="@layout/toolbar_home"/>
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_118"
        android:gravity="center_vertical"
        android:layout_marginTop="@dimen/dp_14"
        android:background="@drawable/bg_white_radius_10dp">
        <ImageView
            android:id="@+id/ic_chat"
            android:layout_width="@dimen/dp_50"
            android:layout_height="@dimen/dp_50"
            android:layout_marginStart="@dimen/dp_20"
            android:src="@drawable/ic_ai_chat"/>
        <TextView
            android:id="@+id/tv_chat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ai_chat"
            android:textSize="@dimen/sp_18"
            android:textColor="@color/text333"
            android:layout_toEndOf="@id/ic_chat"
            android:layout_alignTop="@id/ic_chat"
            android:layout_marginStart="@dimen/dp_16"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ai_chat_describe"
            android:textSize="@dimen/sp_14"
            android:textColor="@color/text999"
            android:layout_alignStart="@id/tv_chat"
            android:layout_alignBottom="@id/ic_chat"
            />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_118"
        android:gravity="center_vertical"
        android:layout_marginTop="@dimen/dp_14"
        android:background="@drawable/bg_white_radius_10dp">
        <ImageView
            android:id="@+id/ic_translate"
            android:layout_width="@dimen/dp_50"
            android:layout_height="@dimen/dp_50"
            android:layout_marginStart="@dimen/dp_20"
            android:src="@drawable/ic_ai_translate"/>
        <TextView
            android:id="@+id/tv_translate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ai_translate"
            android:textSize="@dimen/sp_18"
            android:textColor="@color/text333"
            android:layout_toEndOf="@id/ic_translate"
            android:layout_alignTop="@id/ic_translate"
            android:layout_marginStart="@dimen/dp_16"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ai_translate_describe"
            android:textSize="@dimen/sp_14"
            android:textColor="@color/text999"
            android:layout_alignStart="@id/tv_translate"
            android:layout_alignBottom="@id/ic_translate"
            />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_118"
        android:gravity="center_vertical"
        android:layout_marginTop="@dimen/dp_14"
        android:background="@drawable/bg_white_radius_10dp">
        <ImageView
            android:id="@+id/ic_voice"
            android:layout_width="@dimen/dp_50"
            android:layout_height="@dimen/dp_50"
            android:layout_marginStart="@dimen/dp_20"
            android:src="@drawable/ic_ai_voice"/>
        <TextView
            android:id="@+id/tv_voice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ai_voice"
            android:textSize="@dimen/sp_18"
            android:textColor="@color/text333"
            android:layout_toEndOf="@id/ic_voice"
            android:layout_alignTop="@id/ic_voice"
            android:layout_marginStart="@dimen/dp_16"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ai_voice_describe"
            android:textSize="@dimen/sp_14"
            android:textColor="@color/text999"
            android:layout_alignStart="@id/tv_voice"
            android:layout_alignBottom="@id/ic_voice"
            />
    </RelativeLayout>
</LinearLayout>