<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ui.home.NoneDeviceFragment">

    <LinearLayout
        android:id="@+id/ll_empty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/iv_none"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/empty_device"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-10dp"
            android:textColor="@color/text333"
            android:textSize="@dimen/sp_16"
            android:text="@string/device_empty"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_14"
            android:textColor="@color/text999"
            android:textSize="@dimen/sp_13"
            android:text="@string/device_empty_tip"/>
        <Button
            android:id="@+id/bt_add"
            android:layout_width="@dimen/dp_200"
            android:layout_height="@dimen/dp_50"
            android:layout_marginTop="@dimen/dp_37"
            android:background="@drawable/bg_blue_radius_10dp"
            android:textColor="@color/white"
            android:text="@string/device_add"
            android:textSize="@dimen/sp_18"/>
    </LinearLayout>

</LinearLayout>