<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_main"
    android:orientation="vertical">

    <include
        android:id="@+id/title"
        layout="@layout/layout_title_no_menu"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_200"
        android:layout_margin="@dimen/padding"
        android:padding="@dimen/padding"
        android:background="@drawable/bg_white_radius_10dp">
        <EditText
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/feedback_tip"
            style="@style/text_text999_sp16"/>
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ctl_category"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_60"
        android:layout_marginStart="@dimen/padding"
        android:layout_marginEnd="@dimen/padding"
        android:paddingStart="@dimen/padding"
        android:paddingEnd="@dimen/padding"
        android:background="@drawable/bg_white_radius_15dp"
        android:gravity="center_vertical">
        <TextView
            android:id="@+id/tv_version"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingTop="@dimen/dp_16"
            android:paddingBottom="@dimen/dp_16"
            android:text="@string/feedback_category"
            style="@style/text_item_me"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
        <TextView
            android:id="@+id/tv_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feedback_category_quality"
            style="@style/text_text999_sp16"
            app:layout_constraintEnd_toStartOf="@id/more"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
        <ImageView
            android:id="@+id/more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_right_grey_16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/ctl_contact"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_60"
        android:layout_margin="@dimen/padding"
        android:paddingStart="@dimen/padding"
        android:paddingEnd="@dimen/padding"
        android:background="@drawable/bg_white_radius_15dp"
        android:orientation="horizontal"
        android:gravity="center_vertical">
        <TextView
            android:id="@+id/contact"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingTop="@dimen/dp_16"
            android:paddingBottom="@dimen/dp_16"
            android:text="@string/feedback_contact"
            style="@style/text_item_me"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
        <EditText
            android:id="@+id/tv_contact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:hint="@string/email_input_tip"
            android:background="@null"
            style="@style/text_text999_sp16"
            android:gravity="end"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/contact"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </LinearLayout>

    <Button
        android:id="@+id/commit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:layout_marginTop="@dimen/dp_50"
        android:layout_marginBottom="@dimen/dp_50"
        android:layout_marginStart="@dimen/padding"
        android:layout_marginEnd="@dimen/padding"
        android:background="@drawable/bg_blue_radius_10dp"
        android:textColor="@color/white"
        android:text="@string/commit"
        android:textSize="@dimen/sp_18"/>
</LinearLayout>